--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "d3": "~3.5.5",
     "backbone": "~1.1.2",
     "requirejs": "~2.1.16",
-    "requirejs-text": "~2.0.14"
+    "requirejs-text": "~2.0.14",
+    "moment": "~2.9.0"
   }
 }
